--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,46 @@
 baseURL = 'https://www.suqf.top/'
 language = 'zh'
 languageCode = 'zh-cn'
-title = '个人博客'
+title = 'vector的个人博客'
 buildDrafts = true
 timeZone = 'Asia/Shanghai'
 theme = 'hugo-paper'
+
+# disqusShortname = 'YOUR_DISQUS_SHORTNAME'   # use disqus comments
+
+[params]
+  # color style
+  color = 'light'                           # linen, wheat, gray, light
+
+  # header social icons
+  # twitter = 'YOUR_TWITTER_ID'               # twitter.com/YOUR_TWITTER_ID
+  github = 'suqingfa'                         # github.com/YOUR_GITHUB_ID
+  # instagram = 'YOUR_INSTAGRAM_ID'           # instagram.com/YOUR_INSTAGRAM_ID
+  # linkedin = 'YOUR_LINKEDIN_ID'             # linkedin.com/in/YOUR_LINKEDIN_ID
+  # mastodon = 'YOUR_MASTODON_LINK'           # e.g. 'https://mastodon.instance/@xxx'
+  rss = true                                # show rss icon
+
+  # home page profile
+  avatar = 'https://avatars.githubusercontent.com/u/18366218'                 # gravatar email or image url
+  name = '苏庆发'
+  # bio = 'YOUR_BIO'
+
+
+  # misc
+  disableHLJS = true                        # disable highlight.js
+  disablePostNavigation = true              # disable post navigation
+  monoDarkIcon = true                       # show monochrome dark mode icon
+  # gravatarCdn = 'GRAVATAR_CDN_LINK'         # e.g. 'https://cdn.v2ex.com/gravatar/'
+  # graphCommentId = "YOUR_GRAPH_COMMENT_ID"  # use graph comment (disqus alternative)
+  math = true                               # enable KaTeX math typesetting globally
+
+  # giscus
+[params.giscus]
+  repo = 'suqingfa/blog'                 # see https://giscus.app for more details
+  repoId = 'R_kgDOKpimPg'
+  category = 'Announcements'
+  categoryId = 'DIC_kwDOKpimPs4Cata2'
+  mapping = 'pathname'
+  theme = 'light'
+  lang = 'zh-CN'
+  data-loading = 'lazy'
