--- a/hugo.toml
+++ b/hugo.toml
@@ -50,13 +50,17 @@ monoDarkIcon = true                       # show monochrome dark mode icon
 # graphCommentId = "YOUR_GRAPH_COMMENT_ID"  # use graph comment (disqus alternative)
 math = true                               # enable KaTeX math typesetting globally
 
-# giscus
+# see https://giscus.app for more details
 [params.giscus]
-repo = 'suqingfa/blog'                 # see https://giscus.app for more details
-repoId = 'R_kgDOKpimPg'
-category = 'Announcements'
-categoryId = 'DIC_kwDOKpimPs4Cata2'
-mapping = 'pathname'
-theme = 'light'
-lang = 'zh-CN'
-data-loading = 'lazy'
+repo = "suqingfa/blog"
+repo-id = "R_kgDOKpimPg"
+category = "Announcements"
+category-id = "DIC_kwDOKpimPs4Cata2"
+mapping = "pathname"
+strict = "0"
+reactions-enabled = "1"
+emit-metadata = "0"
+input-position = "bottom"
+theme = "light"
+lang = "zh-CN"
+crossorigin = "anonymous"
